# scrapydash

./: .coveragerc  .gitignore  HISTORY.md  MANIFEST.in  README.md  README_CN.md  deploy-cloudrun.sh  main-cloudrun.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  scrapydash.db  scrapydweb.db  scrapydweb_settings_v11.py  setup.py
.circleci/: config.yml
_superseded/: __version__.py.BAK  main.py.BAK  models_legacy.py.BAK  run.py.BAK
_superseded/data/demo_projects/ScrapydWeb_demo - 副本/ScrapydWeb_demo/: pipelines.py
_superseded/data/demo_projects/ScrapydWeb_demo/ScrapydWeb_demo/: items.py  middlewares.py  settings.py
_superseded/run_fastapi.BAK/: main.py
_superseded/views/: baseview.py
_superseded/views/dashboard/: cluster_reports.py  jobs.py  node_reports.py
_superseded/views/files/: items.py  log.py  logs.py  projects.py
_superseded/views/operations/: deploy.py  execute_task.py  schedule.py  scrapyd_deploy.py
_superseded/views/overview/: multinode.py  servers.py  tasks.py
_superseded/views/system/: settings.py
_superseded/views/utilities/: parse.py  send_text.py
databases/: apscheduler.db
scrapydash/: __init__.py  __main__.py.BAK  __version__.py  app.py  auth.py  common.py  database.py  main.py.BAK  models.py  models_fastapi.py  models_legacy.py.BAK  run.py.BAK  scheduler.py  vars.py
scrapydash/routers/: api.py  system.py
scrapydash/run_fastapi/: main.py
scrapydash/static/css/: style.css
scrapydash/static/js/: common.js
scrapydash/templates/: 500.html  base.html  base_modern.html  cluster_reports.html  deploy.html  index.html  jobs.html  jobs_classic.html  jobs_mobileui.html  node_reports.html  schedule.html  settings.html
scrapydash/templates/scrapydweb/: index.html  servers.html  settings.html
scrapydash/utils/: check_app_config.py  poll.py  send_email.py  setup_database.py  sub_process.py
scrapydash/views/overview/: tasks.py
tests/: conftest.py  test_a_factory.py  test_metadata.py  test_models_fastapi.py  test_setup_database.py  utils.py
